<resources>
    <string name="app_name">AndroidUiUsingKotlin</string>
    <string name="welcome_1">Welcome</string>
    <string name="login">pranton.work@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="txt1">Want to Login instantly?</string>
    <string name="txt2">Use Your Finger!</string>
</resources>